--- a/public/site.css
+++ b/public/site.css
@@ -1,2 +1,2 @@
 * {margin: 0; padding: 0;}
-html, body {width: 100%; height: 100%; background-color: #f0f0f0; }
+html, body {width: 100%; height: 100%; background-color: #f0f0f0}
